--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>Tasks</title>
+	<title>TASKS</title>
 	<link rel="stylesheet" href="/tasks/css/bootstrap.min.css">
 	<script src="/tasks/js/bootstrap.min.js"></script>
 </head>
